# flory

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: codecov.yml  joss-paper-draft.yml  python-package.yml  release.yml
docs/: Makefile  requirements.txt  rtd-requirements.txt  temp.txt
docs/notes/: chemical_potential.tex  definealphabet.tex.inc  grand_canonical.tex
docs/paper/: Makefile  flory.md  mcmp.bib  paper.bib  paper.md
docs/source/: api.rst  conf.py  detail.rst  examples.rst  index.rst  installation.rst  ref.rst  symbol.rst  theory.rst
docs/source/_templates/: custom-module-template copy.rst  custom-module-template.rst
docs/source/ext/autoclasstoc/: __init__.py  errors.py  plugin.py  sections.py  utils.py
example/: binary_phase_diagram.ipynb  find_conexiting_phases.ipynb
examples/: binary_phase_diagram.py  coexisting_with_constraints.py  coexisting_with_constraints.py.out  find_coexiting_phases.py  find_coexiting_phases.py.out  find_coexiting_phases_class.py  find_coexiting_phases_ternary.py  find_coexiting_phases_ternary.py.out  find_coexiting_phases_unequal_sizes.py  find_coexiting_phases_unequal_sizes.py.out  find_conexiting_phases.py  finite_size_effect.py  grandcanonical_with_constraints.py  grandcanonical_with_constraints.py.out  polydispersed.py  polydispersed.py.out  requirements.txt  ternary_phase_diagram.py
flory/: __init__.py  cpfinder.py  mcmp.py  shortcut.py  utils.py
flory/commom/: __init__.py  exceptions.py  utilities.py
flory/common/: __init__.py  exceptions.py  math.py  phases.py  utilities.py
flory/constraint/: __init__.py  base.py  linear_global.py  linear_local.py  no.py
flory/detail/: mcmp_impl.py
flory/ensemble/: __init__.py  base.py  canonical.py  grandcanonical.py
flory/entropy/: __init__.py  base.py  ideal_gas.py  ideal_gas_polydispersed.py
flory/free_energy/: __init__.py  base.py  flory_huggins.py
flory/interaction/: __init__.py  base.py  flory_huggins.py  flory_huggins_block.py
flory/mcmp/: __init__.py  _finder_impl.py  _mcmp_impl.py  finder.py  mcmp.py
mcmp/: __init__.py  cpfinder.py  cpfinder_impl.py
tests/: conftest.py  requirements.txt  test_consistency.py  test_cpfinder.py  test_cpfinder_impl.py  test_examples.py  test_mcmp.py  test_shortcut.py
tests/common/: test_math.py  test_phases.py
tests/detail/: test_mcmp_impl.py
tests/ensemble/: test_canonical.py
tests/free_energy/: test_flory_huggins.py  test_free_energy.py
tests/mcmp/: test_finder.py
